--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -121,6 +121,22 @@
   tags:
     - skip_ansible_lint
 
+- name: Wait for Jenkins to start up before proceeding.
+  uri:
+    url: "{{ jenkins_plugins_jenkins_base_url }}/cli/"
+    method: GET
+    return_content: "yes"
+    timeout: 5
+    body_format: raw
+    follow_redirects: "no"
+    status_code: 200,403
+  register: result
+  until: (result.status == 403 or result.status == 200) and (result.content.find("Please wait while") == -1)
+  retries: "60"
+  delay: "30"
+  changed_when: false
+  check_mode: false
+
 - block:
   - name: "gather jenkins facts."
     include_role:
